Alterações da estrutura acrecentação de imagens, textos e audio; futura alteração mexer no css

--- a/trabalho/Index.html
+++ b/trabalho/Index.html
@@ -23,13 +23,15 @@
        <h1> Coffe Shop - Paradise Shop</h1>
 
 
-       <audio src="" 
+       
+       <audio src="./Audio/Coffee Lofi ☕1 Hour Cafe Song 🎵 Stream cafe ✨cute & relaxing music 🍪 Make Your Day Better [01dn67QubYQ].mp3" 
     controls>
       
       </audio>
     </header>
   </div>
 </div>
+
 <!--Area dos links do site para as outras areas dos sites sendo eles:
  - Sobre: Falando mas sobre o Processo de criação o objetivo do site;
  - Cardapio: contendo os tipos de Cafe que pode ser feito e pedido;
@@ -43,27 +45,21 @@
 
   </nav>
 
-<!-- Area que contem um mini texto falando brvemente sobre o site e uma imagem-->
-  <div id="tronco">
-    <main id="conteudo">
-      <div id="img1">
-        <img src="./Imagens/coffee-4367868_1920 (1).jpg" 
-        alt="imagen de um cafe gourmet estilo milkshake "
-        width="630"
-        height="760">
+  <!--Banner-->
+  <Main>
+    <div id="banner" class="imagens">
+      <img src="./Imagens/caffeine-1866758.jpg" 
+      alt="imagen de um cappucino visto de cima"
+      width="100%" height="700px">
+    </div>
 
-      </div>
-      <br/>
-      <div id="col_esq">
 
-        <p>
-          site de uma cafeteria,contedo um pouco sobre o que é e um Cardapio, sera aperfeiçoado em breve.
-        </p>
-
-      </div>
-    </main>
-
-  </div>
+    <div id="texto.principal">
+      <h2 id="titulo.principal">Bem vindo ao Paradise Coffee</h2>
+      <p id="p1">O melhor lugar para se degustar um cafe</p>
+      <p id="p2">Venha nos conhecer e aproveite um cafe</p>
+    </div>
+  </Main>
 
 <!-- Rodape contento contatos, o ano de Criação e o nome do criador do site-->
   <footer id="rodape">
@@ -71,6 +67,21 @@
 
       <div id="contatos">
 
+        <a href="" id="link whatzap"><img src="./Imagens/Design_sem_nome3.png" 
+          rel="icon" type="image/png" alt="logo e link do whatzap" id="logo whatzap"
+          height="75" width="75"></a>
+
+        <a href="" id="link facebook"><img src="./Imagens/Design_sem_nome2.png" 
+          rel="icon" type="image/png" alt="logo e link do facebook" id="logo facebook"
+          height="75" width="75"></a>
+
+        <a href="" id="link likedin"><img src="./Imagens/Design_sem_nome1.png" 
+          rel="icon" type="image/png" alt="logo e link do likedin" id="logo likedin"
+          height="75" width="75"></a>
+
+        <a href="" id="link instragram"><img src="./Imagens/Design_sem_nome.png" 
+          rel="icon" type="image/png" alt="logo e link do instragram" id="logo instragram"
+          height="75" width="75"></a>
 
       </div>
       <div id="informação">
@@ -80,12 +91,7 @@
 
       </div>
     </div>
-
   </footer>
 
-
-  
-  
 </body>
-  
 </html>
