--- a/trabalho/Paginas/Cardapio.html
+++ b/trabalho/Paginas/Cardapio.html
@@ -20,12 +20,10 @@
   <div id="root">
     <header id="cabeçalho">
 
-       <h3> Coffe Shop - Paradise Shop</h3>
-
-       
-       <audio src="../Audio/Coffee Lofi ☕1 Hour Cafe Song 🎵 Stream cafe ✨cute & relaxing music 🍪 Make Your Day Better [01dn67QubYQ].mp3" 
+      <h3> Coffe Shop - Paradise Shop</h3>
+      <img src="../Imagens/Paradise Coffee.jpg" alt="logo da cafeteria" width="100px" height="100px">
+      <audio src="../Audio/Coffee Lofi ☕1 Hour Cafe Song 🎵 Stream cafe ✨cute & relaxing music 🍪 Make Your Day Better [01dn67QubYQ].mp3" 
     controls>
-      
       </audio>
 
     </header>
