--- a/trabalho/Paginas/Sobre.html
+++ b/trabalho/Paginas/Sobre.html
@@ -19,12 +19,11 @@
 <div id="menu">
   <div id="root">
     <header id="cabeçalho">
-      <h3> Coffe Shop - Paradise Shop</h3>
 
-       
-       <audio src="../Audio/Coffee Lofi ☕1 Hour Cafe Song 🎵 Stream cafe ✨cute & relaxing music 🍪 Make Your Day Better [01dn67QubYQ].mp3" 
+      <h3> Coffe Shop - Paradise Shop</h3>
+      <img src="../Imagens/Paradise Coffee.jpg" alt="logo da cafeteria" width="100px" height="100px">
+      <audio src="../Audio/Coffee Lofi ☕1 Hour Cafe Song 🎵 Stream cafe ✨cute & relaxing music 🍪 Make Your Day Better [01dn67QubYQ].mp3" 
     controls>
-      
     </audio>
 
     </header>
@@ -38,7 +37,7 @@
   <nav id="link">
 
     <a class="links" id="Index" href="../index.html">Inicio</a>
-    <a class="links" id="sobre" href="./sobre.html">Sobre</a>
+    <a class="links" id="Cardapio" href="./Cardapio.html">Cardapio</a>
     <a class="links" id="Formulario" href="./Formulario.html">Comentarios</a>
   </nav>
 </div>
