--- a/trabalho/Index.html
+++ b/trabalho/Index.html
@@ -56,8 +56,8 @@
 
     <div id="texto.principal">
       <h2 id="titulo.principal">Bem vindo ao Paradise Coffee</h2>
-      <p id="p1">O melhor lugar para se degustar um cafe</p>
-      <p id="p2">Venha nos conhecer e aproveite um cafe</p>
+      <p id="p1">Bem vindo ao Paradise Coffee, onde beber café faz você se sentir no paraíso, você não irá se arrepender.</p>
+      <p id="p2">Venha conhecer e degustar os melhores cafés de qualidade e com preço acessível. </p>
     </div>
   </Main>
 
