--- a/trabalho/Paginas/Sobre.html
+++ b/trabalho/Paginas/Sobre.html
@@ -20,7 +20,7 @@
   <div id="root">
     <header id="cabeçalho">
 
-      <h3> Coffe Shop - Paradise Shop</h3>
+      <h3> Coffee Shop - Paradise Shop</h3>
       <img src="../Imagens/Paradise Coffee.jpg" alt="logo da cafeteria" width="100px" height="100px">
       <audio src="../Audio/Coffee Lofi ☕1 Hour Cafe Song 🎵 Stream cafe ✨cute & relaxing music 🍪 Make Your Day Better [01dn67QubYQ].mp3" 
     controls>
@@ -55,8 +55,16 @@
         <br/>
         <div id="col_esq">
 
-          <p>Esse site foi feito para trazer conforto quando estiver fazendo um delicioso pedido.</p>
-          <p>Aqui encontrara uma variedade de Cafe artesanais que fara você querer mais.</p>
+          
+          <p>Esse site foi feito para trazer conforto quando estiver fazendo um delicioso pedido, e para ser o mais simples e direto na hora que estiver fazendo o seu pedido,
+            com o intuito de não se estressar mais ainda com os problemas da vida e sim e somente em relaxar.</p>
+
+          <p>Aqui encontrará uma variedade de Café artesanais que fará você querer mais,
+            além de pedir outros tipos de lanches como acompanhamentos para tomar com o seu café, aqui você se sentirá confortável e nas nuvens.</p>
+
+          <p>No site você poderá fazer o pedido sem a necessidade de ficar na fila quando estiver na cafeteria que se encontra nos shoppings dos Plano Piloto e ela são Shopping Conjunto Nacional, 
+            Pátio Brasil Shopping,Brasília Shopping, o Boulevard Shopping Brasília, o ParkShopping e o Terraço Shopping funcionando das 8:00 da manhã até as 19:00 da noite.</p>
+
           <p>Aproveite, cada detalhe foi pensado para trazer o melhor e o conforto para somente você.</p>
 
         </div>
