--- a/trabalho/Paginas/Sobre.html
+++ b/trabalho/Paginas/Sobre.html
@@ -23,7 +23,7 @@
       <h3> Coffee Shop - Paradise Shop</h3>
       <img src="../Imagens/Paradise Coffee.jpg" alt="logo da cafeteria" width="100px" height="100px">
       <audio src="../Audio/Coffee Lofi ☕1 Hour Cafe Song 🎵 Stream cafe ✨cute & relaxing music 🍪 Make Your Day Better [01dn67QubYQ].mp3" 
-    controls>
+    controls autoplay>
     </audio>
 
     </header>
